// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenseStatus component should display display warning is expired 1`] = `
<DocumentFragment>
  <div
    class="css-zkj008-root"
    data-test-subj="appHeader"
  >
    <div
      class="css-1bb256e-primaryRow"
    >
      <div
        class="css-1put8yh-titleCluster"
      >
        <div
          class="css-eg0b7t-titleGroup"
        >
          <div
            class="css-154m2kl"
          >
            <div
              class="css-1trvrwr-titleWrapper-titleOffsetStyle"
            >
              <h1
                class="euiTitle emotion-euiTitle-s"
              >
                <span
                  class="css-1lv2mba-titleFrame"
                >
                  <span
                    aria-hidden="true"
                    class="css-17v8vwb-titleSizer"
                  >
                    Your Platinum license has expired
                  </span>
                  <span
                    class="css-t9u6rw-titleText"
                    data-test-subj="appHeaderTitle"
                  >
                    Your Platinum license has expired
                  </span>
                </span>
              </h1>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row-badgesContainer"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <span
                class="euiBadge emotion-euiBadge-danger-badge"
                data-test-subj="appHeaderBadge"
                title="Inactive"
              >
                <span
                  class="euiBadge__content emotion-euiBadge__content"
                >
                  <span
                    class="euiBadge__text emotion-euiBadge__text"
                  >
                    Inactive
                  </span>
                </span>
              </span>
            </div>
          </div>
          <div
            class="titleActionsReveal css-1oeh8gv-titleActionsReveal"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-8yzqxk-titleClusterSpacer"
        />
      </div>
      <div
        class="css-m8xpyo-trailingSlot"
      />
    </div>
    <div
      class="css-122rsq3-secondaryContentRow"
      data-test-subj="appHeaderDescription"
    >
      <div
        class="euiText emotion-euiText-xs-euiTextColor-subdued"
      >
        <p>
          Your license expired on 
        </p>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
  />
</DocumentFragment>
`;

exports[`LicenseStatus component should display normally when license is active 1`] = `
<DocumentFragment>
  <div
    class="css-zkj008-root"
    data-test-subj="appHeader"
  >
    <div
      class="css-1bb256e-primaryRow"
    >
      <div
        class="css-1put8yh-titleCluster"
      >
        <div
          class="css-eg0b7t-titleGroup"
        >
          <div
            class="css-154m2kl"
          >
            <div
              class="css-1trvrwr-titleWrapper-titleOffsetStyle"
            >
              <h1
                class="euiTitle emotion-euiTitle-s"
              >
                <span
                  class="css-1lv2mba-titleFrame"
                >
                  <span
                    aria-hidden="true"
                    class="css-17v8vwb-titleSizer"
                  >
                    Your Gold license is active
                  </span>
                  <span
                    class="css-t9u6rw-titleText"
                    data-test-subj="appHeaderTitle"
                  >
                    Your Gold license is active
                  </span>
                </span>
              </h1>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row-badgesContainer"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <span
                class="euiBadge emotion-euiBadge-success-badge"
                data-test-subj="appHeaderBadge"
                title="Active"
              >
                <span
                  class="euiBadge__content emotion-euiBadge__content"
                >
                  <span
                    class="euiBadge__text emotion-euiBadge__text"
                  >
                    Active
                  </span>
                </span>
              </span>
            </div>
          </div>
          <div
            class="titleActionsReveal css-1oeh8gv-titleActionsReveal"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-8yzqxk-titleClusterSpacer"
        />
      </div>
      <div
        class="css-m8xpyo-trailingSlot"
      />
    </div>
    <div
      class="css-122rsq3-secondaryContentRow"
      data-test-subj="appHeaderDescription"
    >
      <div
        class="euiText emotion-euiText-xs-euiTextColor-subdued"
      >
        <p>
          Your license will expire on October 12, 2099 8:00 PM EDT
        </p>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
  />
</DocumentFragment>
`;
